inheritance/inheritance180_output.txt
inheritance$ g++ inheritance180.cpp 
inheritance180.cpp: In function ‘int main()’:
inheritance180.cpp:49:33: error: ‘sq’ was not declared in this scope; did you mean ‘s’?
   49 |   cout << __LINE__ << "\t: " << sq.Area() << endl;
      |                                 ^~
      |                                 s
inheritance$ 
